# sbaas-productivity

./: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  settings.yaml
docs/: FUNCTIONAL_SPEC.md  TECHNICAL_SPEC.md
src/config/: config_loader.py  db.py
src/features/: example_feature.py  focus_timer.py  site_blocker.py
src/ui/: main_window.py
src/utils/: helpers.py
tests/: conftest.py  test_config.py  test_example_feature.py  test_focus_timer.py  test_site_blocker.py
